# smitemotd-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  rustfmt.toml
src/: api.rs  lib.rs  macros.rs  main.rs  model.rs  models.rs  motd.rs  types.rs
src/cli/: macros.rs  main.rs  pickledb.rs
src/cli/notify/: email.rs  fmt.rs  mod.rs  pushbullet.rs  pushed.rs  slack.rs  stream.rs
src/notify/: email.rs  fmt.rs  mod.rs  pushbullet.rs  pushed.rs  pushedco.rs  slack.rs  stream.rs  writer.rs
src/store/: mod.rs  pickledb.rs
