[package]
name = "smitemotd"
version = "0.1.0"
authors = ["Kevin Darlington <kevin@outroot.com>"]
edition = "2018"
build = false

[dependencies]
reqwest = "0.9.12"
chrono = "0.4.6"
md-5 = "0.8.0"
pickledb = "0.4.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
clap = { version = "2.32.0", features = ["color"] }
toml = "0.5.0"
yansi = "0.5.0"
dirs = "1.0.5"
uuid = { version = "0.7.3", features = ["v4"] }
lettre = "0.9.0"
pretty_env_logger = "0.3.0"
log = "0.4.6"

[build-dependencies]
denv = "0.2.0"

[features]
default = []
compile_env = []

[[bin]]
name = "smitemotd"
path = "src/main.rs"
