[package]
name = "smitemotd"
version = "0.1.1"
authors = ["Kevin Darlington <kevin@outroot.com>"]
edition = "2018"
build = false

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
chrono = { version = "0.4.13", features = ["serde"]}
md-5 = "0.9.1"
# pickledb = "0.4.1"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
# clap = { version = "2.33.1", features = ["color"] }
# toml = "0.5.6"
# yansi = "0.5.0"
# dirs = "3.0.1"
# uuid = { version = "0.8.1", features = ["v4"] }
# lettre = "0.9.3"
pretty_env_logger = "0.4.0"
log = "0.4.11"

[build-dependencies]
denv = "0.2.0"

[features]
default = []
compile_env = []

[lib]
name = "smitemotd"
path = "src/lib.rs"

# [[bin]]
# name = "smitemotd-cli"
# path = "src/cli/main.rs"
